# mirbsd-cvs

./: UP
CVSROOT/: README  checkoutlist  commitinfo  config  cvs-genperm  cvswrappers  genlog  loginfo  mklogci  mklogtag  modules  postadmin  posttag  taginfo  tracker  verifymsg
X11/: Makefile  README
X11/depends/: Makefile  Makefile.inc
X11/extras/: Makefile  Makefile.inc
X11/xc/: Makefile  README.MirOS
contrib/extraman/: Makefile  cprng.8  gnat_ugn_unw.texi  tcpdump.8
contrib/gnu/libtool/: BSDmakefile  Makefile.am  configure.ac  libtool.m4  ltmain.in  ltmain.sh  m4salt.inc  m4sugar.inc
contrib/hosted/: README
contrib/samples/: Makefile  RCStags  cvs_automerge  cvs_bugs  devel-keys  dot.Xmodmap  dot.Xmodmap.light  dot.Xmodmap.us_jp  dot.Xmodmap.xapps  dot.Xresources  dot.xinitrc  etc_profile  import-3rdpty  kana  kbd-layout  kbd-layout.80c  kbd-layout.euc-jp  kbd-xf86  myXenvironment  openssl.cnf  portmdoc  ucs2utf8  uni_smp.txt  unidata.htm  unidata.txt  unitable.htm  utf-8
contrib/tests/: README
gcc/: Makefile  Makefile.inc  Makefile.lang  Makefile.sub  README
gcc/boehm-gc/: Makefile.am  Makefile.bsd-wrapper  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.in  dyn_load.c  finalize.c  mach_dep.c  mark_rts.c  misc.c  os_dep.c  threadlibs.c
gcc/fastjar/: Makefile.am  Makefile.bsd-wrapper  Makefile.in  aclocal.m4  compress.c  compress.h  config.h.in  configure  jargrep.c  jartool.c  jartool.h  pushback.c  zipfile.h
gcc/gcc/: ChangeLog  Makefile.bsd-wrapper  Makefile.in  builtin-attrs.def  builtins.c  builtins.def  c-bounded.c  c-common.c  c-common.h  c-decl.c  c-format.c  c-opts.c  c-parse.in  c-typeck.c  c.opt  calls.c  collect2.c  combine.c  common.opt  config.gcc  config.in  configure  configure.ac  cpperror.c  cppmacro.c  cse.c  dbxout.c  dwarf2out.c  explow.c  expr.c  final.c  flags.h  fold-const.c  function.c  gcc.c  gcse.c  genattrtab.c  genautomata.c  gthr-dce.h  gthr-posix.c  (+26 more)
gcc/gpcdoc/: Make-lang.in  Makefile  README  gpc.html  gpc.info  gpcs-de.html  gpcs-de.info  gpcs.html  gpcs.info
gcc/libada/: Makefile
gcc/libffi/: Makefile.am  Makefile.bsd-wrapper  Makefile.in  aclocal.m4  configure  configure.in  fficonfig.h.in
gcc/libffi/include/: Makefile.am  Makefile.in
gcc/libjava/: ChangeLog  LIBGCJ_LICENSE  Makefile.am  Makefile.bsd-wrapper  Makefile.in  acinclude.m4  aclocal.m4  boehm.cc  configure  configure.in  jni.cc  prims.cc  verify.cc
gcc/libobjc/: Makefile.bsd-wrapper  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  encoding.c  misc.c  objects.c  sendmsg.c
gcc/libstdc++-v3/: Makefile.am  Makefile.bsd-wrapper  Makefile.in  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.host  fragment.am
ports/: .cvsignore  INDEX  Makefile  README  Setup.sh  Setup.sh.8
ports/essentials/: Makefile
ports/meta/: Makefile
ports/voip/: Makefile
src/: .cvsignore  Makefile  Makefile.inc  README
src/distrib/: Makefile  Makefile.kernel  empty.ngz
src/etc/: MAKEDEV.common  MAKEDEV.man  MAKEDEV.mansub  MAKEDEV.mi  MAKEDEV.sub  Makefile  anacron  ccd.conf  changelist  cronrun  crontab  csh.login  daily  dhclient.conf  dhcpd.conf  dhcpd.interfaces  exports  fbtab.head  fbtab.tail  ftpchroot  ftpusers  gettytab  group  hosts  hosts.equiv  hosts.lpd  inetd.conf  isdnd.rc.sample  isdnd.sppp.sample  locate.rc  login.conf  mailer.conf  make.cfg  man.conf  master.passwd  moduli  monthly  motd  mrouted.conf  netstart  (+33 more)
src/gnu/: Makefile
src/gnu/usr.bin/cvs/contrib/: Makefile.am  Makefile.in  cvs_acls.html  cvs_acls.in  pvcs2rcs.in  rcs2log.1  rcs2log.sh  sandbox_status.sh  sccs2rcs.in  validate_repo.in
src/gnu/usr.bin/cvs/doc/: HACKING.DOCS  Makefile.am  Makefile.in  cvs-paper.ms  cvs.man.footer  cvs.man.header  cvs.texinfo  cvsclient.texi  getdate.texi  mkman.pl  stamp-1  stamp-vti  version-client.texi  version.texi
src/gnu/usr.bin/cvs/doc/paper/: Makefile
src/gnu/usr.bin/cvs/lib/: Makefile.am  Makefile.in  allocsa.h  chdir-long.c  getcwd.c  getdate.c  getdate.h  getdate.y  getdelim.c  getpass.h  glob.c  md5.c  md5.h  pagealign_alloc.c  regcomp.c  regex.c  regex_internal.c  regex_internal.h  sunos57-select.c  system.h  tempname.c  test-getdate.sh  vasnprintf.c  xalloc.h
src/gnu/usr.bin/texinfo/: Makefile.am  Makefile.bsd-wrapper  Makefile.in  aclocal.m4  config.in  configure  configure.ac  system.h
src/gnu/usr.bin/texinfo/info/: Makefile.am  Makefile.in  filesys.c  filesys.h  makedoc.c  nodes.c  terminal.c
src/gnu/usr.bin/texinfo/makeinfo/: Makefile.am  Makefile.in  cmds.c  files.c  html.c  makeinfo.c  multi.c
src/gnu/usr.bin/texinfo/util/: Makefile.am  Makefile.in  gen-dir-node  install-info.c  texindex.c
src/include/: Makefile  adler32.h  blf.h  bm.h  bsd_auth.h  cast.h  ctype.h  db.h  dirent.h  dlfcn.h  err.h  fstab.h  fts.h  getopt.h  glob.h  gnu-versions.h  iconv.h  inttypes.h  kvm.h  langinfo.h  limits.h  locale.h  login_cap.h  math.h  md4.h  md5.h  netdb.h  nl_types.h  ohash.h  paths.h  regex.h  resolv.h  rmd160.h  search.h  sfv.h  sha1.h  sha2.h  signal.h  stdbool.h  stddef.h  (+15 more)
src/kern/: Makefile.inc
src/lib/: Makefile  upd-chk-soversion
src/libexec/: Makefile  Makefile.inc
src/sbin/: Makefile  Makefile.inc
src/scripts/: RCStags  cleanenv  editdiff  genhtman.sh  import-3rdpty  mnt-cvsroot  roff2htm  stringpool.sh  systrace.mk  systrace.sed  tarck  tarmk  tarports  tarsets  webhash  xbuild-binutils.sh  xbuild-env.sh  xbuild-gcc.sh  xbuild-tool.sed
src/share/: Makefile  Makefile.inc
src/sys/: Makefile
src/usr.bin/: Makefile  Makefile.inc
src/usr.sbin/: Makefile  Makefile.inc
test/: testfile
www/: .cvsignore  .htaccess  404.php  ISC-Licence  LICENCE  Makefile  MirOS-Licence  cvs.cgi  cvsweb.conf  getnam.php  index.php  reloc.php  robots.txt  setcss.php  vbegin.php  vend.php  vfuncs.php  vindex.inc  vsbare.css  vskonq.css  vsmini.css  vsroot.css  vstyle.css  wiki.cfg  wiki.cgi  wiki.map
www/.linked/: acronyms
www/content/: .htaccess  SnVwcEVkaXRvcg__.inc  TWlyYnNkS3No.inc  Y2xvZy0yMDA0.inc  Y2xvZy0yMDA1.inc  Y2xvZy0yMDA2.inc  Y3Zzd2Vi.inc  (+44 more)
(+17176 files in other folders)
